test/haskell2010/conformance/negative/invalid-character-literal.hs
module InvalidCharacterLiteral where

main = '\q'
